# katalab

./: .gitignore  README.md  main.py  pyproject.toml  sessions.json
case-studies/biohelix_senior_ml/candidate/: cv_academic.md  github_readme.md  interview_feedback.md  interview_transcript.txt  learning_profile.yaml
case-studies/biohelix_senior_ml/company/: about_company.md  about_team.md  engineering_culture.md  jd_senior_mle.md
case-studies/nebula_junior_dev/candidate/: github_snapshot.json
case-studies/nebula_junior_dev/company/: about.md  engineering_handbook.md
case-study/candidate/: interview_notes.md  interview_transcript.txt  learning_preferences.yaml  resume.md
case-study/company/: about_team.md  jd_senior_backend.md
src/: models.py  utils.py
src/backend/: agent.py  builder.py  client.py  main.py  models.py  sessions.py  utils.py
src/backend/summarisation/: role.py  run.py
src/backend/summariser/: __init__.py  pipeline.py  run.py
src/frontend/: app.js  index.html  style.css
src/summarisation/: role.py  run.py
src/summariser/: README.md  pipeline.py  run.py  utils.py
tests/: test_backend.py
