[project]
name = "katalab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "coverage>=7.13.0",
    "dotenv>=0.9.9",
    "fastapi>=0.124.4",
    "google>=3.0.0",
    "google-genai>=1.55.0",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "pydantic-ai>=1.32.0",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "ruff>=0.14.9",
    "uvicorn>=0.38.0",
]
